[package]
name = "forever-safer"
version = "0.1.0"
edition = "2024"

[features]
default = []
atomic-poll = ["seg-queue", "num-bigint"]
seg-queue = ["crossbeam", "dashmap"]

[dependencies]
crossbeam = {version = "0.8.4", optional = true}
dashmap = {version = "6.1.0", optional = true}
num-bigint = {version = "0.4.6", optional = true}
