[package]
name = "forever-safer"
version = "0.1.0"
edition = "2024"

[features]
default = ["full", "test"]
full = ["atomic-poll", "seg-queue", "instant-bus"]
test = ["full", "plotters"]
# default = []
seg-queue = ["crossbeam", "dashmap", "parking_lot"]
atomic-poll = ["seg-queue", "ibig", "once_cell", "parking_lot"]
instant-bus = ["atomic-poll", "flume"]

[dependencies]
crossbeam = {version = "0.8.4", optional = true }
dashmap = { version = "6.1.0", optional = true }
flume = { version = "0.11.1", optional = true }
ibig = { version = "0.3.6", optional = true }
once_cell = { version = "1.21.3", optional = true }
parking_lot = { version = "0.12.4", optional = true }
thiserror = "2.0.12"
# For test
plotters = { version = "0.3.7", optional = true }